[tool.poetry]
name = "preference-based-aht"
version = "0.1.0"
description = ""
authors = ["Max Taylor-Davies <maxtaylordavies@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.1"
absl-py = "^2.1.0"
attrs = "^23.2.0"
gym = "0.21.0"
idna = "2.7"
imageio = "^2.34.1"
mpyq = "0.2.5"
numpy = "^1.26.4"
pbr = "4.3.0"
pillow = "^10.3.0"
pluggy = "0.7.1"
portpicker = "1.2.0"
probscale = "^0.2.5"
protobuf = "3.6.1"
py = "1.6.0"
pygame = "^2.5.2"
pyparsing = "2.2.2"
PySC2 = "3.0.0"
pytest = "4.3.1"
python-dateutil = "2.7.3"
PyYAML = "5.3.1"
requests = "2.19.1"
rware = "^1.0.3"
s2clientprotocol = "4.10.1.75800.0"
sacred = "^0.8.5"
scipy = "^1.13.0"
six = "1.11.0"
sk-video = "1.1.10"
snakeviz = "^2.2.0"
tensorboard_logger = "^0.1.0"
torch = "2.0.0"
tornado = "5.1.1"
urllib3 = "1.23"
websocket-client = "0.53.0"
whichcraft = "0.5.2"
wrapt = "1.10.11"
smac = {git = "https://github.com/oxwhirl/smac.git"}
einops = "^0.8.0"
torch-scatter = "^2.1.2"
pyglet = "1.5.11"
lbforaging = { path = "../lb-foraging", develop = true }
tqdm = "^4.66.4"
Shimmy = ">=0.2.1"
gymnasium = "^0.29.1"
rich = "^13.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
